--- a/.gitignore
+++ b/.gitignore
@@ -8,7 +8,11 @@ local_settings.py
 fabfile.py
 manage.py
 __init__.py
-static/
-deploy/
 HelloDjango/
+deploy/
+static/
 templates/
+
+!*/static/
+!*/templates/
+
